change non-final static variables to instance fields